; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_rs6000-tdep.c_rs6000_register_raw_size.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_rs6000-tdep.c_rs6000_register_raw_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch_tdep = type { i32, %struct.reg* }
%struct.reg = type { i32 }

@current_gdbarch = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @rs6000_register_raw_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rs6000_register_raw_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gdbarch_tdep*, align 8
  %4 = alloca %struct.reg*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @current_gdbarch, align 4
  %6 = call %struct.gdbarch_tdep* @gdbarch_tdep(i32 %5)
  store %struct.gdbarch_tdep* %6, %struct.gdbarch_tdep** %3, align 8
  %7 = load %struct.gdbarch_tdep*, %struct.gdbarch_tdep** %3, align 8
  %8 = getelementptr inbounds %struct.gdbarch_tdep, %struct.gdbarch_tdep* %7, i32 0, i32 1
  %9 = load %struct.reg*, %struct.reg** %8, align 8
  %10 = load i32, i32* %2, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.reg, %struct.reg* %9, i64 %11
  store %struct.reg* %12, %struct.reg** %4, align 8
  %13 = load %struct.reg*, %struct.reg** %4, align 8
  %14 = load %struct.gdbarch_tdep*, %struct.gdbarch_tdep** %3, align 8
  %15 = getelementptr inbounds %struct.gdbarch_tdep, %struct.gdbarch_tdep* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @regsize(%struct.reg* %13, i32 %16)
  ret i32 %17
}

declare dso_local %struct.gdbarch_tdep* @gdbarch_tdep(i32) #1

declare dso_local i32 @regsize(%struct.reg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
